Removed support for 'a.button'. Changed 'a.tab-a' to 'a.tabs-a' to be consistent with other 'a' elemetns used within components. Set tab line-height to 1 and adjusted padding. Fixed vertical alignment of text within left and right addons via flexbox.

--- a/css/forms/addons-wrapper.css
+++ b/css/forms/addons-wrapper.css
@@ -18,7 +18,9 @@ div.addons-wrapper {
     padding: 0.375em 0.625em;
     border: 0.1rem solid #d8d8d8;
     background-color: whitesmoke;
-    color: #7a7a7a; }
+    color: #7a7a7a;
+    display: flex;
+    align-items: center; }
     div.addons-wrapper div.left-addon.has-button, div.addons-wrapper div.right-addon.has-button {
       padding: 0;
       border: none; }
