--- a/scss/components/tabs.scss
+++ b/scss/components/tabs.scss
@@ -1,6 +1,6 @@
 @import "../colors.scss";
 
-$tab-padding: 0.25em 0.875em;
+$tab-padding: 0.5em 0.875em;
 $tab-radius: 0.1875em 0.1875em 0em 0em;
 $tab-bottom-border-width: 0.2rem;
 $tab-color: $light-black;
@@ -25,15 +25,16 @@ ul.tabs {
     text-align: center;
     padding: $tab-padding;
     border-radius: $tab-radius;
+    line-height: 1;
     color: $tab-color;
     border-bottom: $tab-bottom-border-width solid transparent;
 
-    a.tab-a, a.tab-a:hover {
+    a.tabs-a, a.tabs-a:hover {
       color: inherit;
       text-decoration: none;
     }
 
-    a.tab-a:focus {
+    a.tabs-a:focus {
       color: $tab-a-focus-color;
     }
 
@@ -77,7 +78,7 @@ ul.tabs {
         background-color: $light-black-thick;
       }
 
-      a.tab-a:focus {
+      a.tabs-a:focus {
         color: $light-gray;
       }
     }
